    can be translated more efficiently by first building an automaton
    for (p0 | p1) U (p1 | p2), and then substituting p0, p1, p2 by the
    appropriate Boolean formula.  Such a trick is now attempted
    for translation of formulas with 4 atomic propositions or
    more (this threshold can be changed, see -x relabel-bool=N in
    the spot-x(7) man page).

  Python:

  - The 'spot.gen' package exports the functions from libspotgen.
    See https://spot.lrde.epita.fr/ipynb/gen.html for examples.

  Backward-incompatible changes:

  - spot::acc_cond::mark_t::operator bool() has been marked as
    explicit.  The implicit converion to bool (and, via bool, to int)
    was a source of bugs.

  - spot::twa_graph::set_init_state(const state*) has been removed.
    It was never used.  You always want to use
    spot::twa_graph::set_init_state(unsigned) in practice.

  - The previous implementation of spot::is_deterministic() has been
    renamed to spot::is_universal().  The new version of
    spot::is_deterministic() requires the automaton to be both
    universal and existential.  This should not make any difference in
    existing code unless you work with the recently added support for
    alternating automata.

  - spot::acc_cond::mark_t::sets() now returns an internal iterable
    object instead of an std::vector<unsigned>.

  Deprecation notice:

  - spot::decompose_strength() is deprecated, it has been renamed
    to spot::decompose_scc().

  - spot::dtwa_complement() is deprecated.  Prefer the more generic
    spot::dualize() instead.

  - The spot::twa::prop_deterministic() methods have been renamed to
    spot::twa::prop_universal() for consistency with the change to
    is_deterministic() listed above.  We have kept
    spot::twa::prop_deterministic() as a deprecated synonym for
    spot::twa::prop_universal() to help backward compatibility.

New in spot 2.3.5 (2017-06-22)

  Bugs fixed:

  - We have fixed new cases where translating multiple formulas in a