@@ -152,6 +152,7 @@
 #include <spot/twaalgos/product.hh>
 #include <spot/twaalgos/stutter.hh>
 #include <spot/twaalgos/translate.hh>
+#include <spot/twaalgos/toweak.hh>
 #include <spot/twaalgos/hoa.hh>
 #include <spot/twaalgos/dtwasat.hh>
 #include <spot/twaalgos/relabel.hh>
@@ -582,6 +583,7 @@ def state_is_accepting(self, src) -> "bool":
 %include <spot/twaalgos/sum.hh>
 %include <spot/twaalgos/stutter.hh>
 %include <spot/twaalgos/translate.hh>
+%include <spot/twaalgos/toweak.hh>
 %include <spot/twaalgos/hoa.hh>
 %include <spot/twaalgos/dtwasat.hh>
 %include <spot/twaalgos/relabel.hh>
