@@ -371,6 +371,7 @@ TESTS_python = \
   python/trival.py \
   python/tra2tba.py \
   python/twagraph.py \
+  python/toweak.py \
   $(TESTS_ipython)
 endif
 
