@@ -144,6 +144,10 @@ New in spot 2.3.5.dev (not yet released)
     more (this threshold can be changed, see -x relabel-bool=N in
     the spot-x(7) man page).
 
+  - The new function spot::to_weak_alternating() is able to take an
+    input automaton with generalized Büchi/co-Büchi acceptance and
+    convert it to a weak alternating automaton.
+
   Python:
 
   - The 'spot.gen' package exports the functions from libspotgen.
